apps/homelab-api/envs/prod/patch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homelab-api
  namespace: homelab-api
spec:
  replicas: 2
  template:
    spec:
      containers:
        - name: api
          image: ghcr.io/wlodzimierrr/homelab-api:0.3.0
          resources:
            requests:
              cpu: 250m
              memory: 256Mi
            limits:
              cpu: 1000m
              memory: 512Mi
