apps/homelab-api/envs/prod/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homelab-api
  namespace: homelab-api
spec:
  rules:
    - host: api.homelab.local
